# Julia_sets

./: .gitignore  Cargo.toml  README.md
.github/workflows/: CI.yml
fractal_cli/: .gitignore  README.md
py_fractal/: Cargo.toml  pyproject.toml
py_fractal/Test/: test.py
py_fractal/src/: lib.rs
src/: main.rs
