[package]
name = "py_fractal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "py_fractal"
crate-type = ["cdylib"]

[dependencies]
pyo3 = {version = "0.19", features = ["extension-module", "num-complex"]}
numpy = "0.19"
num = "0.4.1"
threadpool = "1.8.1"